@@ -43,6 +43,10 @@ Post-v3.1.0
        ovs-vsctl set port vhost-user0 qos=@newqos -- \
           --id=@newqos create qos type=egress-policer \
           other-config:kpkts_rate=123 other-config:kpkts_burst=123
+     * Added support for ingress packet-per-second policing.
+       Examples:
+       $ ovs-vsctl set interface dpdk0 ingress_policing_kpkts_rate=123
+       $ ovs-vsctl set interface dpdk0 ingress_policing_kpkts_burst=123
 
 
 v3.1.0 - 16 Feb 2023
